--- a/frontend/src/app/track-list/track-list.component.css
+++ b/frontend/src/app/track-list/track-list.component.css
@@ -4,6 +4,5 @@ div.container {
 
 div.container:after {
   content: "";
-  flex:auto;
-  margin: 10px;
+  flex-basis: 33%;
 }
